- Improved the logic responsible for caching loaded wavebanks
- Fixed some bugs in the streaming logic which caused looping XWB sounds to sometimes fail
- Added logic to allow streamed sounds to have effects applied to them dynamically
- Added a control for specifying the length of the buffers read for streamed sounds.  Defaults to 0.1 seconds.

v1.5.2.0
- Made the MonoSound.Audio.FormatWav class public
- WAVE data with metadata can now be loaded by MonoSound

v1.5.1.0
- Added support for loading SoundEffect instances from XACT wavebank streams (overload was missing)

v1.5.0.0
- Added support for loading SoundEffect instances from System.IO.Stream instances
- Added support for applying sound filters to System.IO.Stream instances

v1.4.0.0
- Added support for streaming from MPEG Audio Layer III (.mp3) files
- Added support for creating SoundEffect instances directly from the supported audio file
   types (.xnb, .wav, .ogg and .mp3)

v1.3.0.0
- Added support for streaming from OGG Vorbis (.ogg) sound files

v1.2.0.0
- Added support for sounds located in XACT sound and wave banks
   (Dislaimer: any looping data stored in the sounds is effectively removed.  Looping sounds
   will have to be set manually in code via SoundEffectInstance.IsLooped)
- Added a sub-manager for streaming sound effects from compiled XNB files and XACT wave banks.
   (Disclaimer: streamed sounds cannot have filters applied to them.)

v1.1.0.0
- Implemented the Freeverb (Reverb) and Echo sound filters from SoLoud
- Sound files can now be passed through multiple filters at once
- OGG Vorbis file format support (.ogg) via NVorbis
- MonoSoundManager contains a new property, AllowEchoOversampling, which controls
   whether the Echo filter is allowed to extend the original sound by over 30 seconds
- MonoSound can now write the sampled sound to a file.  Set the
   MonoSoundManager.LogDirectory property to the directory where the sounds will be